  . Added .phar to default authorized extensions. (fat)

- BCmath:
  . Fixed bug #60377 (bcscale related crashes on 64bits platforms) (shm)

- EXIF:
  . Fixed bug #60150 (Integer overflow during the parsing of invalid exif
    header). (Stas, flolechaud at gmail dot com)

- Intl:
  . Fixed bug #60192 (SegFault when Collator not constructed
    properly). (Florian)

- Gd:
  . Fixed bug #60160 (imagefill() doesn't work correctly
    for small images). (Florian)
    
- Mbstring:
  . Fixed possible crash in mb_ereg_search_init() using empty pattern. (Felipe)
    
- MS SQL:
  . Fixed bug #60267 (Compile failure with freetds 0.91). (Felipe)

- OpenSSL:
  . Fixed bug #60279 (Fixed NULL pointer dereference in
    stream_socket_enable_crypto, case when ssl_handle of session_stream is not
    initialized.) (shm)

- Oracle Database extension (OCI8):
  . Fixed bug #59985 (show normal warning text for OCI_NO_DATA).
    (Chris Jones)
    
- Phar:
  . Fixed bug #60261 (NULL pointer dereference in phar). (Felipe)
  . Fixed bug #60164 (Stubs of a specific length break phar_open_from_fp
    scanning for __HALT_COMPILER). (Ralph Schindler)

- Postgres:
  . Fixed bug #60244 (pg_fetch_* functions do not validate that row param 
    is >0). (Ilia)

- SOAP
  . Fixed bug #44686 (SOAP-ERROR: Parsing WSDL with references). (Dmitry)
  
- Tidy:
  . Fixed bug #54682 (Tidy::diagnose() NULL pointer dereference).
    (Maksymilian Arciemowicz, Felipe)

03 Nov 2011, PHP 5.3.9RC1

- Core:
  . Fixed bug #60139 (Anonymous functions create cycles not detected by the
    GC). (Dmitry)
  . Fixed bug #60120 (proc_open's streams may hang with stdin/out/err when 
    the data exceeds or is equal to 2048 bytes). (Pierre, Pascal Borreli)
  . Fixed bug #60019 (Function time_nanosleep() is undefined on OS X). (Ilia)
  . Fixed bug #55798 (serialize followed by unserialize with numeric object
    prop. gives integer prop). (Gustavo)
  . Fixed bug #55749 (TOCTOU issue in getenv() on Windows builds). (Pierre)